tests/assets/test_suites/w3c_wsdl20/documents/bad/InterfaceOperation-4B/InterfaceOperation.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/InterfaceOperation-4B/InterfaceOperation.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:tns="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows an invalid use of an interface operation.
		The style specified must be an absolute IRI.
		
		This document violates assertion 
		InterfaceOperation-1019.
	</wsdl:documentation>

	<wsdl:interface name="myInterface">
		<wsdl:operation name="myOperation" pattern="http://www.w3.org/ns/wsdl/in-only" style="samplestyle">
		</wsdl:operation>
	</wsdl:interface>

</wsdl:description>
